pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-negative-lookahead.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-negative-lookahead
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx
  rules:
    - host: negative-lookahead.localhost
      http:
        paths:
          - path: /api/licensing/((?!_internal).*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: whoami
                port:
                  number: 80
